<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Personal">
        <menu>
            <item
                android:id="@+id/menuLogout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />

            <item
                android:id="@+id/menuLocation"
                android:icon="@drawable/location"
                android:title="@string/my_location" />

        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/about"
                android:title="@string/about_us" />

            <item
                android:id="@+id/menuContactUs"
                android:icon="@drawable/contact"
                android:title="@string/contact_us" />

        </menu>
    </item>

</menu>